Comit din cand incand
23

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@ projecten.pdf
 "WhatsApp Image 2020-10-06 at 13.25.30.jpeg"
 WhatsApp Image 2020-10-06 at 13.25.30.jpeg
 *.asv
+Part2/iddata-09.mat
+Part2/~$New Microsoft Excel Worksheet.xlsx
+Part2/idPredwithIC.png
+Part2/idPredwithoutIC.png
+Part2/idSimwithESTIMATE.png
+Part2/idSimwithIC.png
+Part2/idSimwithoutIC.png
+Part2/idPredwithESTIMATE.png
+Part2/New Microsoft Excel Worksheet.xlsx
+Part2/regreshon.jpg
+Part2/valPredwithESTIMATE.png
+Part2/valPredwithIC.png
+Part2/valSimwithESTIMATE.png
+Part2/valSimwithIC.png
+Part2/~$prezentare.pptx
+Part2/prezentare.pptx
