--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ Part2/valSimwithESTIMATE.png
 Part2/valSimwithIC.png
 Part2/~$prezentare.pptx
 Part2/prezentare.pptx
+Part2/NicolaeRosaSocaci.pdf
+Part2/NicolaeRosaSocaci.pptx
