--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,20 @@ Part2/~$prezentare.pptx
 Part2/prezentare.pptx
 Part2/NicolaeRosaSocaci.pdf
 Part2/NicolaeRosaSocaci.pptx
+Part2/NicolaeRosaSocaci.zip
+Part2/UNUSED/idPredwithESTIMATE.png
+Part2/UNUSED/idPredwithIC.png
+Part2/UNUSED/idPredwithoutIC.png
+Part2/UNUSED/idSimwithESTIMATE.png
+Part2/UNUSED/idSimwithIC.png
+Part2/UNUSED/idSimwithoutIC.png
+Part2/UNUSED/New Microsoft Excel Worksheet.xlsx
+Part2/UNUSED/regreshon.jpg
+Part2/UNUSED/valPredwithESTIMATE.png
+Part2/UNUSED/valPredwithIC.png
+Part2/UNUSED/valSimwithESTIMATE.png
+Part2/UNUSED/valSimwithIC.png
+Part2/UNUSED/WorstCasePerformance.pdf
+Part2/WorstCasePerformance.pdf
+Part2/WorstCasePerformance.pdf
+Part2/WorstCasePerformance.pdf
